# EstforTest

./: .gitignore  README.md  pyproject.toml
estfortest/: client.py  main.py  models.py
estfortest/abis/: Game.json  Players.json
estfortest/data/: config.py
